--- a/sections/probability_statistics.tex
+++ b/sections/probability_statistics.tex
@@ -34,5 +34,6 @@
 				&= \sum^N_{n=1}X_n^2 - N\overline{X}^2 = \sum^N_{n=1}(X_n^2 - \overline{X}^2)
 		\end{align*}
 	\item (Gaussian distribution) \\
-		TODO
+		See \url{http://en.wikipedia.org/wiki/Sum_of_normally_distributed_random_variables}.
+		$\overline{Z} = 2 - 3 = -1$, $\sigma^2_{Z} = 1 + 4 = 5$.
 \end{enumerate}
