--- a/sections/linear_algebra.tex
+++ b/sections/linear_algebra.tex
@@ -38,8 +38,12 @@
 				($\Rightarrow$) For any eigenvector $\vec{x}$, $\vec{x}^TA\vec{x} > 0$.
 				$\Rightarrow \vec{x}^T\lambda \vec{x} > 0 \Rightarrow \lambda > 0$.
 		\end{itemize}
-	\item (inner product) \\
-		TODO
+	\item (inner product)
+		\begin{itemize}
+			\item $\max(\vec{u}^T\vec{x})=\|\vec{x}\|$ when $\vec{u}=\frac{\vec{x}}{\|\vec{x}\|}$.
+			\item $\min(\vec{u}^T\vec{x})=-\|\vec{x}\|$ when $\vec{u}=\frac{\vec{x}}{-\|\vec{x}\|}$.
+			\item $\min(|\vec{u}^T\vec{x}|)=0$.  See \url{http://http://en.wikipedia.org/wiki/Perpendicular}.
+		\end{itemize}
 	\item (distance) \\
-		TODO
+		\[ \frac{3 - (-2)}{1^2} = 5\]
 \end{enumerate}
